# AstrBot

./: .pre-commit-config.yaml  debug_auth.py  requirements.txt
.cursor/rules/: README.mdc  coding_conventions.md  coding_conventions.mdc  core_project_rules.mdc  multi_tenancy_guards.md  multi_tenancy_guards.mdc  project_overview.md  project_overview.mdc  test rules.mdc
cursor doc/: 1.改造方案评估.md  DOCUMENT_INDEX.md  README.md  ai_development_guide.md  功能说明.md  后端开发计划.md  开发规范.md  技术栈.md  架构说明.md  测试用例.md  运行逻辑（核心流程图）.md  部署与运维.md  需求规格说明书.md
cursor doc/algorithms/: 00_algorithms_design_overview.md  README.md
cursor doc/algorithms/session_management/: session_allocation.md
cursor doc/api_contracts/: README.md  saas_platform_api.yaml
cursor doc/api_contracts/models/: common_models.yaml
cursor doc/database_design/: README.md  erd_diagram.md
saas-platform/: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  coverage.xml  debug_api.py  docker-compose.yml  env.example  pyproject.toml
saas-platform/.cursor/rules/: multi_tenancy_guards.md  project_overview.md
saas-platform/alembic/: env.py
saas-platform/app/: __init__.py  main.py
saas-platform/app/api/: __init__.py  deps.py
saas-platform/app/api/v1/: __init__.py  ai_features.py  analytics.py  instances.py  messages.py  rbac.py  sessions.py  tenants.py  user_roles.py  webhooks.py  websocket.py
saas-platform/app/core/: __init__.py  database.py  middleware.py  permissions.py  security.py
saas-platform/app/core/config/: __init__.py  settings.py
saas-platform/app/core/database/: __init__.py
saas-platform/app/models/: message.py  role.py  session.py  tenant.py  user.py
saas-platform/app/schemas/: analytics.py  auth.py  common.py  message.py  session.py  tenant.py  user.py
saas-platform/app/services/: agent_suggestion_service.py  analytics_service.py  auth_service.py  auto_reply_service.py  context_manager.py  instance_auth_service.py  instance_config_service.py  message_service.py  rbac_service.py  session_service.py  session_summary_service.py  tenant_service.py  webhook_service.py
saas-platform/app/services/llm/: __init__.py  base_provider.py  dify_provider.py  openai_provider.py
saas-platform/app/services/session_summary/: summary_analyzer.py
saas-platform/app/utils/: logging.py
saas-platform/docs/ai_guides/: 00_PROJECT_OVERVIEW_AI.md
saas-platform/k8s/: deployment.yaml
saas-platform/monitoring/: prometheus.yml
saas-platform/scripts/: security_scan.py
saas-platform/tests/: README.md  conftest.py  测试实施进度报告.md  测试状态快照.md
saas-platform/tests/e2e/: test_customer_service_flow.py
saas-platform/tests/performance/: load_test.py
saas-platform/tests/unit/: test_config.py  test_tenant_model.py  test_user_model.py
scripts/: check_file_length.py
